tests/valid/type_enum.py
from fhir_types import FHIR_Patient

p: FHIR_Patient = {"gender": "male"}
